--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
+                MENU <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
@@ -137,12 +137,12 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron mb-5 pb-0 text-center">
+        <div class="jumbotron text-center">
             <img class="m-5" src="assets/img/BMA%20Logo.png" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
-        <div class="row d-flex justify-content-end my-5">
+        <div class="row d-flex justify-content-end">
             <h1 class="titlebanner bannerright">FEATURED TOPICS</h1>
         </div>
         <div class="jumbotron pt-6 m-0 text-center">
@@ -192,7 +192,7 @@
             </div>
         </div>
             <!--       Article Gallery-->
-            <div class="jumbotron py-6 m-0 text-center middlecon">
+            <div class="jumbotron py-6 text-center middlecon">
             <h1 class="display-3">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
 				<div class="google-maps">
@@ -204,7 +204,7 @@
 			<p>We create landing pages to fit all types of needs. Click below to explore more of the work we do for our members.</p>
               <div class="row">
                 <div class="col"></div>
-                <div id="accordion" class="col-md-6">
+                <div id="accordion" class="col-md-7">
                     <div class="card">
                         <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">COMPANIES BY TYPE<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                         </button>
@@ -283,7 +283,7 @@
 					</div>
             </div>
         </div>
-        <div class="container-fluid mx-0 my-5 instafeed">
+        <div class="container-fluid my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
             </div>
