--- a/index.html
+++ b/index.html
@@ -114,15 +114,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Product 1</a>
                         </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
-                            Upcoming Events
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Product 1</a>
-                        </div>
-                    </li>
+					</li>
                     <li class="nav-item">
                         <a class="nav-link mx-4" href="#">Contact</a>
                     </li>
@@ -143,7 +135,7 @@
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
         <div class="row d-flex justify-content-end">
-            <h1 class="titlebanner bannerright">FEATURED TOPICS</h1>
+            <h1 class="titlebanner bannerright">UPCOMING EVENTS</h1>
         </div>
         <div class="jumbotron pt-6 m-0 text-center">
             <!--           Article Gallery-->
