--- a/index.html
+++ b/index.html
@@ -235,38 +235,38 @@
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
-        <div class="container-fluid px-5">
-            <div class="row">
-					<div class="col-lg-4 my-5">
+        <div class="container-fluid">
+            <div class="row p-5">
+					<div class="col-lg col-md-12 my-3">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
                             <div class="bloglay p-3">
-                                <h5 class="card-title"><a href="#">Blog Post #1</a></h5>
+                                <h5 class="card-title my-3"><a href="#">Blog Post #1</a></h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
                     </div>
 					</div>
-					<div class="col-lg-4 my-5">
+					<div class="col-lg col-md-12 my-3">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
                             <div class="bloglay p-3">
-                                <h5 class="card-title"><a href="#">Blog Post #2</a></h5>
+                                <h5 class="card-title my-3"><a href="#">Blog Post #2</a></h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
                     </div>
 					</div>
-					<div class="col-lg-4 my-5">
+					<div class="col-lg col-md-12 my-3">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
                             <div class="bloglay p-3">
-                                <h5 class="card-title"><a href="#">Blog Post #3</a></h5>
+                                <h5 class="card-title my-3"><a href="#">Blog Post #3</a></h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
@@ -274,6 +274,9 @@
                     </div>
 					</div>
             </div>
+			<div class="row justify-content-end">
+				<button class="btn mx-5">Click here to go to the blog →</button>
+			</div>
         </div>
         <div class="container-fluid my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
