slight style adjustments

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 </ul>
             </div>
         </nav>
+        <!--Landing Section -->
         <div class="jumbotron text-center">
             <img class="m-5" src="assets/img/BMA%20Logo.png" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
@@ -187,7 +188,7 @@
             <div class="jumbotron py-6 text-center middlecon">
             <h1 class="display-3">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
-				<div class="google-maps">
+				<div class="google-maps mx-5">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8685.861608812062!2d-74.00364329976517!3d40.65438259801745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520954809766" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
             <p class="lead m-0">
                 <a class="btn btn-primary btn-lg mt-4" href="#" role="button">Find out more</a>
@@ -235,6 +236,7 @@
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
+        <!--Blog Section -->
         <div class="container-fluid">
             <div class="row p-5">
 					<div class="col-lg col-md-12 my-3">
