--- a/index.html
+++ b/index.html
@@ -103,8 +103,30 @@
                         <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
                             Job Board
                         </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Product 1</a>
+                        <div class="dropdown-menu p-3 text-center">
+                            <div class="row mb-3 justify-content-center">
+                              <h2>Positions Hiring Preview</h2>
+                            </div>
+                            <div class="row mb-4">
+                              <div class="col-md">
+                                <p><strong>Position 1</strong></p>
+                                <p>Looking for a hard working employee to direct the creation of our next project.</p>
+                                <p>Required experience: Associates Degree or greater, 2 years + experience</p>
+                              </div>
+                              <div class="col-md">
+                                <p><strong>Position 2</strong></p>
+                                <p>Looking for a hard working employee to direct the creation of our next project.</p>
+                                <p>Required experience: Associates Degree or greater, 2 years + experience</p>
+                              </div>
+                              <div class="col-md">
+                                <p><strong>Position 3</strong></p>
+                                <p>Looking for a hard working employee to direct the creation of our next project.</p>
+                                <p>Required experience: Associates Degree or greater, 2 years + experience</p>
+                              </div>
+                            </div>
+                            <div class="row justify-content-end">
+                              <a href="#" class="mx-3">Click here to see the rest of our positions →</a>
+                            </div>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -114,7 +136,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Product 1</a>
                         </div>
-					</li>
+					          </li>
                     <li class="nav-item">
                         <a class="nav-link mx-4" href="#">Contact</a>
                     </li>
@@ -199,12 +221,13 @@
                 <div class="col"></div>
                 <div id="accordion" class="col-md-7">
                     <div class="card">
-                        <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">COMPANIES BY TYPE<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                        <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">COMPANIES BY TYPE
                         </button>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="row">
                                 <div class="card-body text-center">
                                     <div class="list-group col-md">
+                                        <p class="list-group-item list-group-item-action"><strong>RESTAURANT</strong></p>
                                         <a href="#" class="list-group-item list-group-item-action">Company 1</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 2</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 3</a>
@@ -212,18 +235,20 @@
                                 </div>
                                 <div class="card-body text-center">
                                     <div class="list-group col-md">
+                                        <p class="list-group-item list-group-item-action"><strong>RECREATION</strong></p>
                                         <a href="#" class="list-group-item list-group-item-action">Company 7</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 8</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 9</a>
                                     </div>
                                 </div>
                                 <div class="card-body text-center">
-									<div class="list-group col-md">
+									              <div class="list-group col-md">
+                                        <p class="list-group-item list-group-item-action"><strong>SERVICES</strong></p>
                                         <a href="#" class="list-group-item list-group-item-action">Company 1</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 2</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 3</a>
-									</div>
-                                    </div>
+									              </div>
+                                </div>
                             </div>
                         </div>
                     </div>
