--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>Broadway Merchants Association</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<!--    Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway:100,600|Montserrat:900,700i,700" rel="stylesheet">
+<!--    Custom Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 	
-<!--	Google Map Responsive-->
+<!--	Google Map Responsiveness-->
 	<style>
     .google-maps {
         position: relative;
@@ -30,8 +32,9 @@
 </style>
 </head>
 
+<!--This body class is used to bypass Boostrap css selector points-->
 <body class="override">
-<!--    Modal Box-->
+<!--    Modal Box Start-->
     <div class="modal fade bannerformmodal" tabindex="-1" role="dialog" aria-labelledby="bannerformmodal" aria-hidden="true" id="bannerformmodal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -84,8 +87,9 @@
             </div>
         </div>
     </div>
+<!--    Modal End-->
     <div class="container-fluid" id="maincon">
-<!--        Navigation-->
+<!--        Navigation Start-->
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -151,7 +155,8 @@
                 </ul>
             </div>
         </nav>
-        <!--Landing Section -->
+<!--        Navigation End-->
+        <!--Landing Section Start-->
         <div class="jumbotron text-center">
             <img class="m-5" src="assets/img/BMA%20Logo.png" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
@@ -161,7 +166,7 @@
             <h1 class="titlebanner bannerright">UPCOMING EVENTS</h1>
         </div>
         <div class="jumbotron pt-6 m-0 text-center">
-            <!--           Article Gallery-->
+            <!--           Article Gallery Start-->
             <div class="cssrow">
                 <div class="column">
                     <div class="article">
@@ -206,7 +211,8 @@
                 </div>
             </div>
         </div>
-            <!--       Article Gallery-->
+<!--       Article Gallery End-->
+<!--        Map and Companies Start-->
             <div class="jumbotron py-6 text-center middlecon">
             <h1 class="display-3">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
@@ -256,12 +262,13 @@
                 <div class="col"></div>
             </div>
             </div>
+<!--Map and Companies End-->
         <div class="container-fluid my-5">
             <div class="row">
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
-        <!--Blog Section -->
+<!--Blog Section Start-->
         <div class="container-fluid">
             <div class="row p-5">
 					<div class="col-lg col-md-12 my-3">
@@ -305,6 +312,8 @@
 				<button class="btn mx-5">Click here to go to the blog →</button>
 			</div>
         </div>
+<!--Blog Section End-->
+<!--Instagram Feed Start-->
         <div class="container-fluid my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
@@ -333,6 +342,8 @@
                     </div>
                 </div>
     </div>
+<!--Instagram Feed End-->
+<!--Footer Start-->
     <div class="container-fluid px-5 foot">
         <footer class="page-footer font-small pt-4 mt-4">
             <div class="container-fluid text-center text-md-left">
@@ -374,11 +385,12 @@
             </div>
         </footer>
     </div>
+<!--Footer End-->
 
 <!--    JQuery-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<!--    Bootstrap-->
+<!--    Bootstrap JS-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!--    Custom JS-->
     <script type="text/javascript" src="assets/js/script.js"></script>
