--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         </div>
 <!--Blog Section End-->
 <!--Instagram Feed Start-->
+<!--Reminder to add Jquery infinite scrolling functionality to gallery-->
         <div class="container-fluid my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
